--- a/bankchurn-api/requirements.txt
+++ b/bankchurn-api/requirements.txt
@@ -1,4 +1,5 @@
-./model-pkg/model_abandono-0.0.1-py3-none-any.whl
+model_abandono @ file://../model-pkg/model_abandono-0.0.1-py3-none-any.whl
+scikit-learn==1.3.2
 uvicorn>=0.20.0,<0.30.0
 fastapi>=0.88.0,<1.0.0
 python-multipart>=0.0.5,<0.1.0
